test/error/requiremain.luau
require "./dir2/main"
